# YcSimulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  ModuleConfig.xml  ModuleConfig_20260318.xml  ModuleConfig_20260319.xml  ModuleConfig_copy_from_15b.xml  UDPNodeConfig_A.xml  ask.txt  cmd.txt  gdbserver.txt  node_topic.xlsx  readme.md  todo.txt  toolchain-aarch64-linux.cmake  toolchain-linux-aarch64-linux-cross.cmake  toolchain-linux-aarch64-win-cross.cmake  yc_udp_config.xml  注意.txt  目标位置.txt  记录.txt
.github/: copilot-instructions.md
cadi_user/include/: cadi_shm.h
doc/: 曝光时间设置接口说明.md  温度焦面位置接口说明.md
doc/共享内存文件/: 1205.md  ZRInterface_c++.h  shm_interface_0.h
doc/参考heartbit/: CommInterface.h  HeartBeat.cpp  HeartBeat.h
lib/: CMakeLists.txt
lib/geolocation/: CMakeLists.txt
lib/geolocation/include/: geolocation.h  wgs84.h
scripts/: 计算目标可识别距离.py
yc_camera_sim/: model.cpp
yc_camera_sim/cadi_user/include/: cadi_shm.h
yc_camera_sim/include/: camera_sim.h  flash_sim.h  fpga_sim.h  fpga_sim.h.bak  global_var_def.hpp  global_vars.h  gpio_sim.h  model.h  object_detection_sim.h  shm_interface.h  timer_period.h  udp_trans.h  utils.h
yc_camera_sim/include/yc/: YC_Controller_Computer.h  YC_Controller_Constant_Define.h  YC_Controller_FPGA_Mess.h  YC_Controller_FPGA_Trans.h  YC_Controller_HMC_Process.h  YC_Controller_Main_Process.h  YC_Controller_Mess_Process.h  YC_Controller_TG_Process.h  YC_Controller_globalVal_Ext.h  YC_Controller_init.h
yc_camera_sim/lib/yc_con/: CMakeLists.txt
yc_camera_sim/lib/yc_con/include/: YC_Controller_Computer.h  YC_Controller_Main_Process.h  YC_Controller_Mess_Process.h  YC_Controller_init.h
yc_camera_sim/lib/yc_con/src/: YC_Controller_Main_Process.cpp
yc_camera_sim/modules/geolocation/include/: projective_geometry.hpp  rotation.h
yc_camera_sim/modules/geolocation/src/: geolocation.cpp  rotation.cpp
yc_camera_sim/src/: camera_sim.cpp  flash_sim.cpp  fpga_sim.cpp  global_vars.cpp  gpio_sim.cpp  model.cpp  object_detection_sim.cpp  timer_period.cpp  udp_trans.cpp  utils.cpp
yc_camera_sim/src/yc/: YC_Controller_Computer.cpp  YC_Controller_HMC_Process.cpp  YC_Controller_Main_Process.cpp  YC_Controller_Mess_Process.cpp  YC_Controller_TG_Process.cpp  YC_Controller_globalVal.c  YC_Controller_globalVal.cpp  YC_Controller_init.c  YC_Controller_init.cpp  geolocation_bak.md
yc_control/include/: control_sim.h
yc_control/src/: control_sim.cpp  yc_control.cpp
yc_control_sim/include/: control_sim.h
yc_control_sim/src/: control_sim.cpp  main.cpp  yc_control.cpp
yc_sim/src/: camera_sim.cpp
yc_test_send_udp_packet/: main.cpp
